docker_servers/yaml_files_for_k8s/app-network.yaml
# app-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-network-policy
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: main-server
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
